fix mobile visibility bug

--- a/src/layout/styles/home.scss
+++ b/src/layout/styles/home.scss
@@ -1,13 +1,12 @@
-.homeWrap {
+.home {
   width: 100vw;
-  min-height: calc(100vh - 30px);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 canvas {
-  transition:all 0.2s;
+  transition: all 0.2s;
 }
 
 .btnwrap {
