--- a/src/layout/styles/index.scss
+++ b/src/layout/styles/index.scss
@@ -5,8 +5,9 @@
   src: url('../assets/fonts/GoodBrush.woff') format('woff');
 }
 
-
-*, *:after, *:before {
+*,
+*:after,
+*:before {
   box-sizing: border-box;
 }
 
@@ -19,10 +20,22 @@ body {
 
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Old versions of Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
+}
+
+#app {
+  height: 100vh;
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.home,
+.about,
+.notfound {
+  flex: 1 0 auto;
 }
